<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:background="@color/colorPrimaryDark">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_margin="10dp">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        app:cardCornerRadius="20dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <ImageView
                android:id="@+id/cardIv"
                android:layout_width="55dp"
                android:layout_height="47dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:scaleType="centerCrop"
                android:src="@drawable/scavenger"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/cardTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="18dp"
                android:fontFamily="@font/sfprodisplay_bold"
                android:text="Scavenger"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="20dp"
                app:layout_constraintStart_toEndOf="@+id/cardIv"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/cardDesc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/sfprodisplay_bold"
                android:maxLines="4"
                android:minLines="2"
                android:paddingLeft="8dp"
                android:paddingRight="8dp"
                android:paddingBottom="16dp"
                android:text="@string/Scavenger"
                android:textColor="@color/colorPrimary"
                android:textSize="16dp"
                android:layout_marginLeft="10dp"
                app:layout_constraintTop_toBottomOf="@+id/cardIv" />


        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        app:cardCornerRadius="20dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <ImageView
                android:id="@+id/cardIv2"
                android:layout_width="55dp"
                android:layout_height="47dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:scaleType="centerCrop"
                android:src="@drawable/assassin"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/cardTitle2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="18dp"
                android:fontFamily="@font/sfprodisplay_bold"
                android:text="Assassin"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="20dp"
                app:layout_constraintStart_toEndOf="@+id/cardIv2"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/cardDesc2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/sfprodisplay_bold"
                android:maxLines="5"
                android:minLines="2"
                android:paddingLeft="8dp"
                android:paddingRight="8dp"
                android:paddingBottom="16dp"
                android:text="@string/Assassin"
                android:textColor="@color/colorPrimary"
                android:textSize="16dp"
                android:layout_marginLeft="10dp"
                app:layout_constraintTop_toBottomOf="@+id/cardIv2" />


        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        app:cardCornerRadius="20dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <ImageView
                android:id="@+id/cardIv3"
                android:layout_width="55dp"
                android:layout_height="47dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:scaleType="centerCrop"
                android:src="@drawable/tracker"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/cardTitle3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="18dp"
                android:fontFamily="@font/sfprodisplay_bold"
                android:text="Tracker"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="20dp"
                app:layout_constraintStart_toEndOf="@+id/cardIv3"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/cardDesc3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/sfprodisplay_bold"
                android:maxLines="4"
                android:minLines="2"
                android:paddingLeft="8dp"
                android:paddingRight="8dp"
                android:paddingBottom="16dp"
                android:text="@string/Tracker"
                android:textColor="@color/colorPrimary"
                android:textSize="16dp"
                android:layout_marginLeft="10dp"
                app:layout_constraintTop_toBottomOf="@+id/cardIv3" />


        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        app:cardCornerRadius="20dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <ImageView
                android:id="@+id/cardIv4"
                android:layout_width="55dp"
                android:layout_height="47dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:scaleType="centerCrop"
                android:src="@drawable/quartermaster"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/cardTitle4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="18dp"
                android:fontFamily="@font/sfprodisplay_bold"
                android:text="Quartermaster"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="20dp"
                app:layout_constraintStart_toEndOf="@+id/cardIv4"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/cardDesc4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/sfprodisplay_bold"
                android:maxLines="4"
                android:minLines="2"
                android:paddingLeft="8dp"
                android:paddingRight="8dp"
                android:paddingBottom="16dp"
                android:text="@string/Quartermaster"
                android:textColor="@color/colorPrimary"
                android:textSize="16dp"
                android:layout_marginLeft="10dp"
                app:layout_constraintTop_toBottomOf="@+id/cardIv4" />


        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

        </LinearLayout>

    </ScrollView>

</LinearLayout>